styles/tablet-and-mobile.css
@media only screen and (max-width: 767px){
    .intro-image{
        height: 600px;
        background-size: cover;
        margin-bottom: 40px;
    }
    .certificates-section{
        flex-direction: column-reverse;;
    }
}
@media only screen and (max-width: 992px){
    .intro-image{
        height: 600px;
        background-size: cover;
    }
}
@media only screen and (min-width: 480px){
    .tool-brief-header{
        display: flex;
    }
}
@media only screen and (min-width: 768px){
    .tool-brief-header{
        display: block;
    }
}
@media only screen and (min-width: 560px){
    .category-links-buttons{
        display: flex;
        margin: auto;
        width: 100%;
        justify-content: space-evenly;
    }
    .category-links-buttons button{
        max-width: 30%;
    }
}
@media only screen and (max-width: 575px){
    .menu-items{
        display: grid;
        text-align: right;
    }
}

